@startuml "HOLA"
class Trial {
    +String id
    +Person deffendant
    +Person plaintiff
    +Date date
    +Category category
}

class Person{
    +String id
    +String name
    +String lastName
}

class Category{
    +String id
    +String description
    +TypeTrial type
}

class TypeTrial{
    +String id
    +String description
}

class TypeAction{
    +String id
    +String description
}

class Action{
    +String id
    +String type
    +DescriptionAction description
    +Date date
}

class DescriptionAction{
    +String id
    +String description
    +TypeAction typeAction
}

Trial --> Category : category

Trial --> Person : deffendant
Trial --> Person : plaintiff

Category --> TypeTrial : type

Action --> DescriptionAction : descriptionAction

DescriptionAction --> TypeAction : typeAction
@enduml